--- a/package.json
+++ b/package.json
@@ -20,7 +20,21 @@
     "react-is": "^18.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "assert": "^2.1.0",
+    "bootstrap": "^5.3.3",
+    "browserify-zlib": "^0.2.0",
+    "date-fns": "^3.6.0",
+    "https-browserify": "^1.0.0",
+    "react-bootstrap": "^2.10.2",
+    "react-ga4": "^2.1.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "swiper": "^11.1.0",
+    "url": "^0.11.3",
+    "use-debounce": "^10.0.0",
+    "util": "^0.12.5"
+    
   },
   "scripts": {
     "start": "react-scripts start",
